# space_wars

./: .gitmodules  Makefile.am  README.md  autogen.sh  configure.ac
inc/: Spaceship.hpp
lib/: Makefile.am
spaceships/: Makefile  Makefile.am  Makefile.in  RandomCruiser.cpp
src/: Makefile  Makefile.am  Makefile.in  main.cpp
src/.deps/: main.Po
